# CRM_FRIGO

./: .env.example  .gitignore  BCT-025-H-ENG-1APM-Manual-Ingenieria (1).md  CLAUDE.md  INSTALL.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 60527d5f623b_create_users_table.py
app/: main.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  security.py  seed.py
app/domain/engineering/: entities.py  services.py  tables.py  value_objects.py
app/infrastructure/models/: user.py
app/modules/auth/: repository.py  router.py  schemas.py  service.py
app/modules/clients/: repository.py  router.py  schemas.py  service.py
app/modules/equipment/: repository.py  router.py  schemas.py  service.py
app/modules/projects/: repository.py  router.py  schemas.py  service.py
app/modules/reports/: repository.py  router.py  schemas.py  service.py
app/modules/users/: repository.py  router.py  schemas.py  service.py
app/modules/warranties/: repository.py  router.py  schemas.py  service.py
static/css/: app.css  login.css  report.css
templates/: base.html  calculation_report.html  error.html  quote_report.html
templates/app/: base.html
templates/app/dashboard/: index.html
templates/app/users/: index.html
templates/login/: index.html
tests/unit/engineering/: test_load_calculator.py  test_value_objects.py
